--- a/SpotifyProject/Base.lproj/Main.storyboard
+++ b/SpotifyProject/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -28,7 +27,7 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="35"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bnP-OJ-f01" id="tOX-XP-ZFr">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="34.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="35"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="artistName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3f-Cy-6xl">
@@ -82,21 +81,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fgh-bX-3ov">
-                                <rect key="frame" x="10" y="20" width="34" height="30"/>
-                                <state key="normal" title="Back">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fgh-bX-3ov">
+                                <rect key="frame" x="12" y="20" width="30" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <state key="normal" title="&lt;">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sLM-rs-IaN">
-                                <rect key="frame" x="0.0" y="58" width="600" height="199"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ArtistNameGoesHere" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4gK-8I-me0">
+                                <rect key="frame" x="186" y="239" width="228" height="28"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Iuh-Z6-7oN">
+                                <rect key="frame" x="228" y="76" width="144" height="144"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="144" id="iuh-ay-1Pb"/>
+                                    <constraint firstAttribute="height" constant="144" id="zah-LM-D1U"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="72"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="tableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4QJ-o7-zG9">
-                                <rect key="frame" x="0.0" y="256" width="600" height="344"/>
+                                <rect key="frame" x="0.0" y="294" width="600" height="306"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="344" id="tUd-cN-8vn"/>
-                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CustomSongCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="ifN-7K-sj4" customClass="CustomSongCell" customModule="SpotifyProject" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="600" height="50"/>
@@ -145,55 +160,37 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Tracks:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1W-IV-jXX">
-                                <rect key="frame" x="10" y="236" width="89" height="21"/>
+                                <rect key="frame" x="12" y="275" width="89" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="JZY-bC-iFb"/>
-                                    <constraint firstAttribute="width" constant="89" id="MC7-US-6a9"/>
+                                    <constraint firstAttribute="height" constant="21" id="FnB-eX-ADc"/>
+                                    <constraint firstAttribute="width" constant="89" id="sP7-x5-6wN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ArtistNameGoesHere" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4gK-8I-me0">
-                                <rect key="frame" x="180" y="207" width="228" height="28"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Iuh-Z6-7oN">
-                                <rect key="frame" x="222" y="66" width="144" height="144"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="144" id="40f-ip-4UM"/>
-                                    <constraint firstAttribute="width" secondItem="Iuh-Z6-7oN" secondAttribute="height" multiplier="1:1" id="fy2-9f-SiJ"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="72"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                        <integer key="value" value="2"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sLM-rs-IaN">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="296"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4QJ-o7-zG9" firstAttribute="bottom" secondItem="f0J-8D-Zdw" secondAttribute="top" id="39z-yk-sI2"/>
-                            <constraint firstItem="4QJ-o7-zG9" firstAttribute="top" secondItem="4gK-8I-me0" secondAttribute="bottom" constant="21" id="6UH-Yd-A6u"/>
-                            <constraint firstItem="sLM-rs-IaN" firstAttribute="top" secondItem="Fgh-bX-3ov" secondAttribute="bottom" constant="8" symbolic="YES" id="BA0-ae-MZF"/>
-                            <constraint firstItem="sLM-rs-IaN" firstAttribute="trailing" secondItem="4QJ-o7-zG9" secondAttribute="trailing" id="CPU-fc-iFB"/>
-                            <constraint firstItem="Iuh-Z6-7oN" firstAttribute="centerX" secondItem="4gK-8I-me0" secondAttribute="centerX" id="IAa-B4-Xac"/>
-                            <constraint firstItem="f0J-8D-Zdw" firstAttribute="top" secondItem="a1W-IV-jXX" secondAttribute="bottom" constant="343" id="L6O-jO-aj1"/>
-                            <constraint firstItem="4gK-8I-me0" firstAttribute="centerX" secondItem="4QJ-o7-zG9" secondAttribute="centerX" constant="-6" id="N9H-Jk-jbV"/>
-                            <constraint firstItem="Fgh-bX-3ov" firstAttribute="top" secondItem="Yi4-kn-zC1" secondAttribute="bottom" id="QNh-qm-KS7"/>
-                            <constraint firstItem="Iuh-Z6-7oN" firstAttribute="top" secondItem="Yi4-kn-zC1" secondAttribute="bottom" constant="46" id="ZWf-EC-qGQ"/>
-                            <constraint firstAttribute="trailing" secondItem="4QJ-o7-zG9" secondAttribute="trailing" id="dJX-qg-p6Y"/>
-                            <constraint firstItem="sLM-rs-IaN" firstAttribute="leading" secondItem="4QJ-o7-zG9" secondAttribute="leading" id="f8a-W8-6z7"/>
-                            <constraint firstItem="Fgh-bX-3ov" firstAttribute="leading" secondItem="cHD-XS-qNM" secondAttribute="leadingMargin" constant="-10" id="j5I-Cl-XVg"/>
-                            <constraint firstItem="Fgh-bX-3ov" firstAttribute="leading" secondItem="a1W-IV-jXX" secondAttribute="leading" id="kBd-Qg-Euw"/>
-                            <constraint firstItem="sLM-rs-IaN" firstAttribute="bottom" secondItem="a1W-IV-jXX" secondAttribute="bottom" id="rMe-Tx-dOK"/>
-                            <constraint firstItem="4QJ-o7-zG9" firstAttribute="leading" secondItem="cHD-XS-qNM" secondAttribute="leading" id="uWU-HV-HHS"/>
-                            <constraint firstItem="4gK-8I-me0" firstAttribute="top" secondItem="Iuh-Z6-7oN" secondAttribute="bottom" constant="-3" id="wcV-5E-ycC"/>
+                            <constraint firstItem="Fgh-bX-3ov" firstAttribute="top" secondItem="Yi4-kn-zC1" secondAttribute="bottom" id="0lv-QY-NtV"/>
+                            <constraint firstItem="sLM-rs-IaN" firstAttribute="leading" secondItem="cHD-XS-qNM" secondAttribute="leading" id="32d-vI-Sbs"/>
+                            <constraint firstItem="a1W-IV-jXX" firstAttribute="leading" secondItem="Fgh-bX-3ov" secondAttribute="leading" id="5go-8i-izv"/>
+                            <constraint firstItem="sLM-rs-IaN" firstAttribute="leading" secondItem="4QJ-o7-zG9" secondAttribute="leading" id="6LT-ty-NSd"/>
+                            <constraint firstItem="Iuh-Z6-7oN" firstAttribute="top" secondItem="Yi4-kn-zC1" secondAttribute="bottom" constant="56" id="8PR-6x-bwQ"/>
+                            <constraint firstItem="sLM-rs-IaN" firstAttribute="trailing" secondItem="4QJ-o7-zG9" secondAttribute="trailing" id="HZ2-fL-duy"/>
+                            <constraint firstAttribute="trailing" secondItem="sLM-rs-IaN" secondAttribute="trailing" id="IXg-Wt-00h"/>
+                            <constraint firstItem="f0J-8D-Zdw" firstAttribute="top" secondItem="a1W-IV-jXX" secondAttribute="bottom" constant="304" id="Zf3-kU-Cfr"/>
+                            <constraint firstItem="a1W-IV-jXX" firstAttribute="leading" secondItem="cHD-XS-qNM" secondAttribute="leadingMargin" constant="-8" id="cJ0-qK-LLY"/>
+                            <constraint firstItem="sLM-rs-IaN" firstAttribute="centerX" secondItem="Iuh-Z6-7oN" secondAttribute="centerX" id="ee5-8k-233"/>
+                            <constraint firstItem="sLM-rs-IaN" firstAttribute="top" secondItem="cHD-XS-qNM" secondAttribute="top" id="ivm-Ru-Dbq"/>
+                            <constraint firstItem="a1W-IV-jXX" firstAttribute="bottom" secondItem="sLM-rs-IaN" secondAttribute="bottom" id="nmx-hc-2Db"/>
+                            <constraint firstItem="4QJ-o7-zG9" firstAttribute="bottom" secondItem="f0J-8D-Zdw" secondAttribute="top" id="qid-cu-QGk"/>
+                            <constraint firstItem="4QJ-o7-zG9" firstAttribute="top" secondItem="4gK-8I-me0" secondAttribute="bottom" constant="27" id="uL6-wk-c7a"/>
+                            <constraint firstItem="4gK-8I-me0" firstAttribute="centerX" secondItem="Iuh-Z6-7oN" secondAttribute="centerX" id="voB-Df-dkG"/>
+                            <constraint firstItem="4gK-8I-me0" firstAttribute="top" secondItem="Iuh-Z6-7oN" secondAttribute="bottom" constant="19" id="wyw-Q9-c6s"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bNU-3r-q0O"/>
