--- a/SpotifyProject/Base.lproj/Main.storyboard
+++ b/SpotifyProject/Base.lproj/Main.storyboard
@@ -84,45 +84,47 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4QJ-o7-zG9">
                                 <rect key="frame" x="0.0" y="294" width="600" height="306"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="65" id="ifN-7K-sj4" customClass="CustomAlbumViewCell" customModule="SpotifyProject" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="600" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ifN-7K-sj4" id="LHd-UM-lbu">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AlbumNameGoesHere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEc-2p-cL9">
-                                                    <rect key="frame" x="89" y="14" width="169" height="19"/>
+                                                    <rect key="frame" x="74" y="14" width="169" height="19"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IHQ-an-Sv8">
                                                     <rect key="frame" x="13" y="6" width="53" height="53"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TypeOfAlbum" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBd-G7-3Ix">
-                                                    <rect key="frame" x="89" y="31" width="93" height="21"/>
+                                                    <rect key="frame" x="74" y="31" width="93" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="93" id="Use-UK-t2h"/>
                                                         <constraint firstAttribute="height" constant="21" id="trs-WP-Hxt"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="IHQ-an-Sv8" firstAttribute="leading" secondItem="LHd-UM-lbu" secondAttribute="leadingMargin" constant="5" id="4u4-vS-kNR"/>
                                                 <constraint firstItem="IHQ-an-Sv8" firstAttribute="centerY" secondItem="LHd-UM-lbu" secondAttribute="centerY" id="6cI-Vu-LsB"/>
-                                                <constraint firstItem="vEc-2p-cL9" firstAttribute="leading" secondItem="IHQ-an-Sv8" secondAttribute="trailing" constant="23" id="Bf4-wR-eEe"/>
+                                                <constraint firstItem="vEc-2p-cL9" firstAttribute="leading" secondItem="IHQ-an-Sv8" secondAttribute="trailing" constant="8" id="Bf4-wR-eEe"/>
                                                 <constraint firstItem="vEc-2p-cL9" firstAttribute="leading" secondItem="yBd-G7-3Ix" secondAttribute="leading" id="HAJ-K8-lm5"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="yBd-G7-3Ix" secondAttribute="bottom" constant="5" id="aSi-vh-jrD"/>
                                                 <constraint firstItem="IHQ-an-Sv8" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="-2" id="cGR-e3-qvy"/>
                                                 <constraint firstItem="yBd-G7-3Ix" firstAttribute="top" secondItem="vEc-2p-cL9" secondAttribute="bottom" constant="-2" id="kgq-6t-sMB"/>
-                                                <constraint firstItem="vEc-2p-cL9" firstAttribute="leading" secondItem="LHd-UM-lbu" secondAttribute="leading" constant="89" id="xVS-TA-GPc"/>
+                                                <constraint firstItem="vEc-2p-cL9" firstAttribute="leading" secondItem="LHd-UM-lbu" secondAttribute="leading" constant="74" id="xVS-TA-GPc"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="albumImg" destination="IHQ-an-Sv8" id="7pH-1I-AhK"/>
                                             <outlet property="albumName" destination="vEc-2p-cL9" id="1ay-hU-Pb0"/>
