repositioned labels in SAArtistVC top songs cells

--- a/SpotifyProject/Base.lproj/Main.storyboard
+++ b/SpotifyProject/Base.lproj/Main.storyboard
@@ -221,14 +221,15 @@
                                                 <constraint firstItem="L2Z-vG-aYm" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="4" id="RMW-wo-EPY"/>
                                                 <constraint firstItem="L2Z-vG-aYm" firstAttribute="trailing" secondItem="LHd-UM-lbu" secondAttribute="trailingMargin" id="ako-xa-PTn"/>
                                                 <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="8hj-wx-KR3" secondAttribute="trailing" constant="3" id="dhT-US-PID"/>
-                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="baseline" secondItem="8hj-wx-KR3" secondAttribute="baseline" id="e6r-ZL-zlj"/>
-                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="firstBaseline" secondItem="8hj-wx-KR3" secondAttribute="firstBaseline" id="eut-Cz-PoE"/>
                                                 <constraint firstItem="8hj-wx-KR3" firstAttribute="leading" secondItem="wrp-NA-Meg" secondAttribute="trailing" constant="8" symbolic="YES" id="fRy-GU-lig"/>
                                                 <constraint firstItem="e7d-tC-GoY" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="-5" id="fhT-Pw-kWq"/>
+                                                <constraint firstItem="L2Z-vG-aYm" firstAttribute="leading" secondItem="Wwu-Lx-53D" secondAttribute="trailing" constant="83" id="liH-0K-bs9"/>
+                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="firstBaseline" secondItem="8hj-wx-KR3" secondAttribute="firstBaseline" id="pch-N9-REI"/>
+                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="baseline" secondItem="8hj-wx-KR3" secondAttribute="baseline" id="pev-59-zFi"/>
+                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="vFL-UQ-jA9" secondAttribute="trailing" constant="92" id="s8f-JZ-IgN"/>
                                                 <constraint firstItem="vFL-UQ-jA9" firstAttribute="baseline" secondItem="L2Z-vG-aYm" secondAttribute="baseline" id="tu5-Zx-Oex"/>
                                                 <constraint firstItem="vFL-UQ-jA9" firstAttribute="top" secondItem="L2Z-vG-aYm" secondAttribute="top" id="xQx-fG-oXr"/>
                                                 <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="wrp-NA-Meg" secondAttribute="trailing" constant="6" id="xcF-Si-T4p"/>
-                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="8hj-wx-KR3" secondAttribute="trailing" constant="4" id="yuN-fu-wQO"/>
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
